@@ -73,4 +73,11 @@ Click help for details.</_secondary>
   <button stock="gtk-quit" response="GTK_RESPONSE_CANCEL"/>
  </error>
 
+ <error id="forget-passwords" type="question" default="GTK_RESPONSE_OK">
+  <_primary>Are you sure you want to forget the passwords?</_primary>
+  <_secondary xml:space="preserve">Clicking the Forget button will forget your passwords and during next login, you will be prompted for password.</_secondary>
+  <button stock="gtk-cancel" response="GTK_RESPONSE_CANCEL"/>
+  <button _label="_Forget" response="GTK_RESPONSE_OK"/>
+ </error>
+ 
 </error-list>
